--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.9510677N,88.36141E">
+            &q=22.961574N,88.3665368E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-11-27 10:33:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.9510677N,88.36141E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-27 10:34:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.961574N,88.3665368E>View on Map</a> </p>
       </center>
     </div>
   </body>
