--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=">
+            &q=23.0000397N,88.2654602E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-11-27 11:24:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-27 11:25:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/23.0000397N,88.2654602E>View on Map</a> </p>
       </center>
     </div>
   </body>
