--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=23.0000663N,88.265458E">
+            &q=23.0000543N,88.26544E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-11-27 11:59:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/23.0000663N,88.265458E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-27 12:00:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/23.0000543N,88.26544E>View on Map</a> </p>
       </center>
     </div>
   </body>
