--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=23.0000187N,88.265455E">
+            &q=23.0000303N,88.26545E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-11-27 12:09:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/23.0000187N,88.265455E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-27 12:10:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/23.0000303N,88.26545E>View on Map</a> </p>
       </center>
     </div>
   </body>
