--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=23.0000445N,88.265462E">
+            &q=23.00004N,88.26548E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-11-27 12:58:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/23.0000445N,88.265462E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-27 12:59:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/23.00004N,88.26548E>View on Map</a> </p>
       </center>
     </div>
   </body>
