--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=23.0000657N,88.2654685E">
+            &q=23.0000592N,88.265462E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-11-27 13:08:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/23.0000657N,88.2654685E>View on Map</a> </p>
+        <p> <strong>Time:</strong>  &nbsp;&nbsp; <a href=http://www.google.com/maps/place/23.0000592N,88.265462E>View on Map</a> </p>
       </center>
     </div>
   </body>
