--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.8602408N,88.338913E">
+            &q=">
         </iframe>
-        <p> <strong>Time:</strong> 2021-11-27 14:18:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8602408N,88.338913E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-27 14:19:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/>View on Map</a> </p>
       </center>
     </div>
   </body>
