--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.876051N,88.3640913E">
+            &q=22.8760373N,88.36409E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-11-27 14:34:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.876051N,88.3640913E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-27 14:35:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8760373N,88.36409E>View on Map</a> </p>
       </center>
     </div>
   </body>
