--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.8531198N,88.36538E">
+            &q=22.8531078N,88.3653875E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-11-28 14:24:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8531198N,88.36538E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-28 14:25:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8531078N,88.3653875E>View on Map</a> </p>
       </center>
     </div>
   </body>
