--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.5105397N,88.3212868E">
+            &q=22.5122538N,88.3218385E">
         </iframe>
-        <p> <strong>Time:</strong>  &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.5105397N,88.3212868E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-28 15:45:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.5122538N,88.3218385E>View on Map</a> </p>
       </center>
     </div>
   </body>
