--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=">
+            &q=22.4905015N,88.2149447E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-11-28 16:29:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-28 16:30:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.4905015N,88.2149447E>View on Map</a> </p>
       </center>
     </div>
   </body>
