--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.4905458N,88.2149288E">
+            &q=22.4905335N,88.2149343E">
         </iframe>
-        <p> <strong>Time:</strong>  &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.4905458N,88.2149288E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-28 17:09:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.4905335N,88.2149343E>View on Map</a> </p>
       </center>
     </div>
   </body>
