--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.5483447N,88.3305942E">
+            &q=22.5536098N,88.332E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-11-28 18:54:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.5483447N,88.3305942E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-28 18:55:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.5536098N,88.332E>View on Map</a> </p>
       </center>
     </div>
   </body>
