--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.6486435N,88.3071412E">
+            &q=22.6589295N,88.3086098E">
         </iframe>
-        <p> <strong>Time:</strong>  &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.6486435N,88.3071412E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-28 19:18:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.6589295N,88.3086098E>View on Map</a> </p>
       </center>
     </div>
   </body>
