--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.7032747N,88.29765E">
+            &q=22.7076703N,88.2999955E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-11-28 19:30:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.7032747N,88.29765E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-11-28 19:31:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.7076703N,88.2999955E>View on Map</a> </p>
       </center>
     </div>
   </body>
