--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.807367N,88.28569E">
+            &q=22.8096602N,88.2792065E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-12-02 10:03:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.807367N,88.28569E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-12-02 10:04:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8096602N,88.2792065E>View on Map</a> </p>
       </center>
     </div>
   </body>
