--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.8675445N,88.12139E">
+            &q=22.8675698N,88.1213772E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-12-02 11:27:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8675445N,88.12139E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-12-02 11:28:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8675698N,88.1213772E>View on Map</a> </p>
       </center>
     </div>
   </body>
