--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.8675168N,88.121384E">
+            &q=22.8675323N,88.12139E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-12-02 11:33:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8675168N,88.121384E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-12-02 11:34:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8675323N,88.12139E>View on Map</a> </p>
       </center>
     </div>
   </body>
