--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.8675772N,88.1213535E">
+            &q=22.8675433N,88.12134E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-12-02 12:32:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8675772N,88.1213535E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-12-02 12:33:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8675433N,88.12134E>View on Map</a> </p>
       </center>
     </div>
   </body>
