--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.835049N,88.1183257E">
+            &q=22.8350325N,88.1183317E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-12-02 13:26:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.835049N,88.1183257E>View on Map</a> </p>
+        <p> <strong>Time:</strong>  &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8350325N,88.1183317E>View on Map</a> </p>
       </center>
     </div>
   </body>
