--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.8350255N,88.11837E">
+            &q=22.8350373N,88.1183763E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-12-02 14:02:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8350255N,88.11837E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-12-02 14:03:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8350373N,88.1183763E>View on Map</a> </p>
       </center>
     </div>
   </body>
