--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.8629323N,88.3411092E">
+            &q=22.8680433N,88.33959E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-12-02 16:00:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8629323N,88.3411092E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-12-02 16:01:01 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8680433N,88.33959E>View on Map</a> </p>
       </center>
     </div>
   </body>
