--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           loading="eager"
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBZddBnQn74R-Vq45iMggVkT6XcEbwipv4
-            &q=22.8721962N,88.3588375E">
+            &q=22.8752238N,88.36135E">
         </iframe>
-        <p> <strong>Time:</strong> 2021-12-02 16:05:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8721962N,88.3588375E>View on Map</a> </p>
+        <p> <strong>Time:</strong> 2021-12-02 16:06:02 &nbsp;&nbsp; <a href=http://www.google.com/maps/place/22.8752238N,88.36135E>View on Map</a> </p>
       </center>
     </div>
   </body>
